# straddle

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  ROADMAP.md  TEST_PR.md  pyproject.toml  routes.py
.opencode/skills/poker-theory/: SKILL.md
docs/: ARCHITECTURE.md  PRODUCT_ROADMAP.md  SPIN_TO_MTT_ROADMAP.md
examples/: python_demo.py
postflop_solver/: AGENTS.md  Cargo.toml  conftest.py  pyproject.toml
postflop_solver/examples/: node_locking_demo.py  python_demo.py
postflop_solver/python/postflop_solver/: __init__.py  api.py
postflop_solver/src/: lib.rs
postflop_solver/tests/: test_api.py
python/postflop_solver/: api.py
scripts/: gen_docs.sh
straddle/: AGENTS.md  README.md  pyproject.toml
straddle/src/straddle/: __init__.py  main.py  routes.py  sessions.py
straddle/tests/: test_main.py  test_phase1.py
straddle/web/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
straddle/web/src/: App.tsx  api.ts  index.css
straddle/web/src/components/: ConfigForm.tsx  HandGrid.tsx  PlayingCard.tsx  SolverView.tsx
