[package]
name = "postflop-solver-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for postflop-solver"
license = "AGPL-3.0-or-later"

[lib]
name = "postflop_solver"
crate-type = ["cdylib", "rlib"]

[dependencies]
postflop-solver = { git = "https://github.com/JulienDanh/postflop-solver" }
pyo3 = { version = "0.22", features = ["abi3-py38"] }
