[project]
name = "straddle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JulienDanh", email = "70134754+JulienDanh@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "httpx2>=2.6.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
straddle = "straddle.main:app"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
